--- a/thesis/alias/background.tex
+++ b/thesis/alias/background.tex
@@ -1,4 +1,5 @@
 \subsection{Alias Analysis}
+\label{bkg:sec:alias}
 An alias analysis endeavors to answer the question ``Do these two pointers point to the same thing?''
 There are two basic varieties: may and must alias.
 Must alias means that two values will definitely point to the same thing, but the lack of such a relationship means nothing.
