--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -55,7 +55,21 @@ A Datalog derivative with extensions for negation and external callbacks can dri
 % * Show the power by
 %   * Implementing the integration of real analyses using the language
 %   * Attempting to do so without using circumscription or aggregation, and seeing what happens.
+We examined the co-dependent analyses of control flow recovery (\S~\ref{sec:cfg}), value analysis (\S~\ref{sec:valanal}), and alias analysis (\S~\ref{bkg:sec:alias}, \S~\ref{chap:alias}).
+Datalog fits well as a structuring tool for these analyses due to its incrementality and ability to handle mutual recursion.
+We add negation (\S~\ref{holmes:sec:circ}) both to handle both the notion of a complete set of jump targets, and completion of a dataflow analysis.
+%TODO I don't like ``require'', but ``encourages'' or ``suggests'' are too weak here
+A complete set of jump targets implicitly discusses a does-not-jump relation, which requires some form of negation.
+Similarly, the a dataflow analysis producing an upper bound which increases throughout the analysis, such as a may-alias dataflow (\S~\ref{alias:sec:dataflow}), is not meaningful until it can no longer grow.
+This means that it speaks to the negation of its complement, again requiring negation.
+{\sc BiTR} also shows a case where we require negation to drop a \emph{minimal} number of constraints (\S~\ref{bitr:sec:circ}).
+%TODO impl doesn't reeealy discuss callbacks at the moment, I should drop a note there and make this reference more specific
+The use of callbacks allows us both to more easily implement the engine (\S~\ref{holmes:sec:impl}).
+It also allows us to utilize traditional imperative data structures, such as hash tables, during the implementation of performance critical analyses (\S~\ref{chap:alias}). 
+These analyses together allow the implementation of a real security analysis (use-after-free, \S~\ref{chap:alias}).
+
 We investigated this approach by designing and implementing \sysname, a logic language engine designed for the integration of binary analyses.
+BiTR (\S~\ref{chap:bitr}) inspired this design.
 For this purpose we invented a novel form of negation, based on circumscription~\cite{circumscription} suited to this particular application (\S~\ref{holmes:sec:circ}).
 This negation can further make progress from failed hypotheses (\S~\ref{holmes:sec:callcc}).
 This adaptation allows Holmes to resolve an output even in the case of a negation cycle, as would be the case with a co-dependent control flow recovery and a value analysis assuming completeness of the control flow graph.
