--- a/thesis/bitr/related.tex
+++ b/thesis/bitr/related.tex
@@ -3,7 +3,7 @@
 \label{sec:related}
 %  Starting blurb similar to backround blurb, surprised by this...
 As this work stands at the confluence of compilation, instruction set architectures, static analysis, and type theory, there is a great deal of prior work that provided the foundation to create \bitr. There have been other attempts to perform binary type recovery. Type theorists have explored the relevant formal systems that enable us to appropriately describe the constraints imposed by the wide variety of instructions. Others have tried to build decompilers, each of which contains at least an attempt at type reconstruction.
-%  Chunk related work into blobs and describe, reference to sections as you do it
+%  Chunk related work into blobs and describe, reference to sections
 \subsection{Types in Compiled Code}
 In large part, previous work has considered dynamic approaches, which use execution traces to get information about concrete values. Another school of thought takes a more forensics-oriented approach, attacking the problem by looking for known data structures within a dump or trace. Finally, there is the school to which this work belongs, static type recovery, where the approach regenerates type information from a representation of the code, rather than from sample runs or matching known data structures.
 
