--- a/thesis/holmes/impl.tex
+++ b/thesis/holmes/impl.tex
@@ -9,7 +9,7 @@ It is my hope that these lessons learned will help a future external-database ba
 Most of the details here are focused on Postgres, but other systems take a generally similar approach so similar problems are likely to occur.
 
 As a result, this section is mostly focused on what went wrong, rather than on how the system was constructed.
-If you want to see how the system was constructed, source is available at \url{https://github.com/maurer/holmes}, but be aware that it does not represent a complete implementation of the language.
+The source is available at \url{https://github.com/maurer/holmes}, but be aware that it does not represent a complete implementation of the language.
 In particular, it only has partial support for aggregation, and no support for circumscription.
 
 \subsubsection{Indices}
